--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
     <a href="https://docs.google.com/spreadsheets/d/1YMSykc7cPwA7bvfZak-Su4fGPp__MH9kWKrZADV8-tk/edit?gid=1998522442#gid=1998522442" target = "_blank">Втрачені</a>
     <a href="https://docs.google.com/spreadsheets/d/1X96e_XqEMG-QAPRHh8EAJ0gru6bJ7jIef8N-vC7JpAs/edit?gid=182078680#gid=182078680" target = "_blank">Заявки із сайту</a>
     <a href="https://docs.google.com/spreadsheets/d/1R54pY8NVzEZ633JCaROp0W3x1WWkdWs5n-G1fGbII8c/edit?gid=1632434140#gid=1632434140" target = "_blank">ERRORS</a>
+	  <a href="https://docs.google.com/spreadsheets/d/1yNA5_chqhMuoE7Hm8ZOJXgpzZK2-9STxpblUxf4jnfM/edit?gid=2005084719#gid=2005084719" target = "_blank">Блокування і борги</a>
     <a href ="https://docs.google.com/document/d/1HnXWpj_1yEefc-jKml3PWS5MJa3_CoZk/edit" target = "_blank">Прейскурант</a>
   </div>
 </div> 
