--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
 </div>
 <div class ="block3">
-<a href="https://docs.google.com/spreadsheets/d/1UcJ-22QlrAh4YAlkAHqvu7Gvn9TKmpFk3QAlsYxNzzA/edit?gid=1910128994#gid=1910128994" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік Вересень</h2></a>
+<a href="https://docs.google.com/spreadsheets/d/1kqT2FJg_33MK7OJB_YcPQp3sgGvwxR7OdY_7il6MSa4/edit?gid=1910128994#gid=1910128994" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік Жовтень</h2></a>
 
 </div>
 <div class ="block3">
