--- a/index.html
+++ b/index.html
@@ -1,200 +1,178 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charser="utf=8">
-<title>ROOM</title>
- <link rel="stylesheet" href="style.css">
- <link rel="icon" href="img/icon/icon" type="image/x-icon">
+	<title>MY-COLUMBUS</title>
+	<link rel="stylesheet" href="style.css"><img srs ="">
+	<style>
+.rotate {
+  animation: spin 5s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+
+.icon {
+    transition: transform 0.3s ease;
+}
+
+.icon:hover {
+    animation: lift 0.6s ease forwards;
+}
+
+@keyframes lift {
+    0% { transform: translateY(0); }
+    50% { transform: translateY(-4px); } /* Піднімання на 10px */
+    100% { transform: translateY(0); }
+}
+	
+		</style>
+	
+	
+	
 </head>
 <body>
+
+<div>
+	<div>
+	<div class="earth-animation"></div>
+    <div class="topnav">
+        <div class="phone-number">тел.0 800 607 407 info@columbus.in.ua</div>
+<div class="phone-number"><b>Я завжди даю 100% на роботі: 10% понеділок, 23% вівторок, 40% середа, 22% четвер і 5% п'ятниця.</b></div> <!-- Номер телефону зліва -->
+        <div>
+            <a class="active" href="https://www.google.co.uk/"  target = "_blank">Google</a>
+            <a href="https://mail.google.com/chat/u/0/#chat/home" target = "_blank">Chat</a>
+            <a href="https://columbus.te.ua/" target = "_blank">Columbus</a>
+            <a href="https://tarassych17.github.io/Columbusic/">Перерва</a>
+        </div>
+    </div>
+</div>
 <div id="dagurdsa-nevailable"> <i class="fa fa-share"></i>
   <div id="gechusudesab-sequiremen">
 <div>
-
+<a><h3>Посилання на звернення</h3> </a>
 <br>
-<hr>
-<a href="https://billing.columbus.te.ua/clients_support_qa.php?clsuqa_client_name_filter=%D0%BF%D0%BE%D1%82&clsuqa_subquestion_name_filter=%D0%BA%D0%BE%D0%BD%D1%81&clsuqa_created_name_filter=%D1%81%D0%B8%D1%87&clsuqa_brief=0&clsuqa_id=13012142#clsuqa" target = "_blank">Консультація</a><br><hr>
-<a href="https://billing.columbus.te.ua/clients_support_qa.php?clsuqa_client_name_filter=%D0%BF%D0%BE%D1%82%D0%B5%D0%BD&clsuqa_subquestion_name_filter=%D0%BF%D1%96%D0%B4%D0%BA%D0%BB%D1%8E%D1%87%D0%B5%D0%BD%D0%BD%D1%8F#clsuqa" target = "_blank">Підключення нового абонента TO</a><br><hr>
-<a href="https://billing.columbus.te.ua/clients_support_qa.php?clsuqa_client_name_filter=%D0%BF%D0%BE%D1%82%D0%B5%D0%BD%D1%86&clsuqa_subquestion_name_filter=%D0%BF%D1%96%D0%B4%D0%BA%D0%BB%D1%8E%D1%87%D0%B5%D0%BD%D0%BD&clsuqa_id=12920522&clsuqa_brief=0#clsuqa" target = "_blank">Підключення нового абонента TЕ</a><br><hr>
-<a href="https://billing.columbus.te.ua/clients_support_qa.php?clsuqa_client_name_filter=%09+%D0%9F%D0%BE%D1%82%D0%B5%D0%BD%D1%86%D1%96%D0%B9%D0%BD%D0%B8%D0%B9+%D0%90%D0%B1%D0%BE%D0%BD%D0%B5%D0%BD%D1%82+%D0%92%D0%92&clsuqa_subquestion_name_filter=%D0%9F%D0%86%D0%94%D0%9A%D0%9B&clsuqa_id=12920522&clsuqa_brief=0#clsuqa" target = "_blank">Підключення нового абонента ВВ</a><br><hr>
-<a href="https://billing.columbus.te.ua/clients_support_qa.php?clsuqa_client_name_filter=%D0%9F%D0%BE%D1%82%D0%B5%D0%BD%D1%86%D1%96%D0%B9%D0%BD%D0%B8%D0%B9%20%D0%90%D0%B1%D0%BE%D0%BD%D0%B5%D0%BD%D1%82%20%D0%A7%D0%93%20%28230925555%29&clsuqa_brief=0&clsuqa_id=12919946#clsuqa" target = "_blank">Підключення нового абонента ЧГ</a><br><hr>
-<a href="https://billing.columbus.te.ua/clients_support_qa.php?clsuqa_client_name_filter=%D0%BF%D0%BE%D1%82&clsuqa_subquestion_name_filter=%D0%B7%D0%B0%D0%BB%D0%B8%D1%88&clsuqa_created_name_filter=%D1%81%D0%B8%D1%87&clsuqa_brief=0&clsuqa_id=12990586#clsuqa" target = "_blank">Запитання невизначеної тематики</a><br><hr>
-<a href="https://billing.columbus.te.ua/clients_support_qa.php?clsuqa_client_name_filter=%D0%BF%D0%BE%D1%82%D0%B5%D0%BD%D1%86&clsuqa_subquestion_name_filter=%D1%83%D1%82%D0%BE%D1%87%D0%BD%D0%B5%D0%BD%D0%BD%D1%8F&clsuqa_created_name_filter=%D1%81%D0%B8%D1%87&clsuqa_brief=0&clsuqa_id=13225972#clsuqa" target = "_blank">Уточнення Інформації по заявці</a><hr>
+<a href="https://billing.columbus.te.ua/clients_support_qa.php?clsuqa_client_name_filter=%D0%BF%D0%BE%D1%82%D0%B5%D0%BD&clsuqa_subquestion_name_filter=%D0%BF%D1%96%D0%B4%D0%BA%D0%BB%D1%8E%D1%87%D0%B5%D0%BD%D0%BD%D1%8F#clsuqa" target = "_blank">Підключення нового абонента TO</a><br><br>
+<a href="https://billing.columbus.te.ua/clients_support_qa.php?clsuqa_client_name_filter=%D0%BF%D0%BE%D1%82%D0%B5%D0%BD%D1%86&clsuqa_subquestion_name_filter=%D0%BF%D1%96%D0%B4%D0%BA%D0%BB%D1%8E%D1%87%D0%B5%D0%BD%D0%BD&clsuqa_id=12920522&clsuqa_brief=0#clsuqa" target = "_blank">Підключення нового абонента TЕ</a><br><br>
+<a href="https://billing.columbus.te.ua/clients_support_qa.php?clsuqa_client_name_filter=%09+%D0%9F%D0%BE%D1%82%D0%B5%D0%BD%D1%86%D1%96%D0%B9%D0%BD%D0%B8%D0%B9+%D0%90%D0%B1%D0%BE%D0%BD%D0%B5%D0%BD%D1%82+%D0%92%D0%92&clsuqa_subquestion_name_filter=%D0%9F%D0%86%D0%94%D0%9A%D0%9B&clsuqa_id=12920522&clsuqa_brief=0#clsuqa" target = "_blank">Підключення нового абонента ВВ</a><br><br>
+<a href="https://billing.columbus.te.ua/clients_support_qa.php?clsuqa_client_name_filter=%D0%9F%D0%BE%D1%82%D0%B5%D0%BD%D1%86%D1%96%D0%B9%D0%BD%D0%B8%D0%B9%20%D0%90%D0%B1%D0%BE%D0%BD%D0%B5%D0%BD%D1%82%20%D0%A7%D0%93%20%28230925555%29&clsuqa_brief=0&clsuqa_id=12919946#clsuqa" target = "_blank">Підключення нового абонента ЧГ</a><br><br>
+<a href="https://billing.columbus.te.ua/clients_support_qa.php?clsuqa_client_name_filter=%D0%BF%D0%BE%D1%82&clsuqa_subquestion_name_filter=%D0%BA%D0%BE%D0%BD%D1%81&clsuqa_created_name_filter=%D1%81%D0%B8%D1%87&clsuqa_brief=0&clsuqa_id=13012142#clsuqa" target = "_blank">Консультація</a><br><br>
+<a href="https://billing.columbus.te.ua/clients_support_qa.php?clsuqa_client_name_filter=%D0%BF%D0%BE%D1%82&clsuqa_subquestion_name_filter=%D0%B7%D0%B0%D0%BB%D0%B8%D1%88&clsuqa_created_name_filter=%D1%81%D0%B8%D1%87&clsuqa_brief=0&clsuqa_id=12990586#clsuqa" target = "_blank">Запитання невизначеної тематики</a><br><br>
+<a href="https://billing.columbus.te.ua/clients_support_qa.php?clsuqa_client_name_filter=%D0%BF%D0%BE%D1%82%D0%B5%D0%BD%D1%86&clsuqa_subquestion_name_filter=%D1%83%D1%82%D0%BE%D1%87%D0%BD%D0%B5%D0%BD%D0%BD%D1%8F&clsuqa_created_name_filter=%D1%81%D0%B8%D1%87&clsuqa_brief=0&clsuqa_id=13225972#clsuqa" target = "_blank">Уточнення Інформації по заявці</a>
 </div>
   </div>
   </div>
+<br><br><br><br>  
+  <div class="widt">
 
-<div class ="container2">
-<div class="block0">
+<table >
 
-<a href="https://mail.google.com/mail/u/0/#inbox" target = "_blank" ><img  src="img/2/1"  title="GMAIL" width="50" heaight="50"></a>
-<a href="https://mail.google.com/chat/u/0/#chat/home" target = "_blank" ><img  src="img/2/4"  title="Google chat" width="50" heaight="50"></a>
-<a href="https://tarassych17.github.io/Columbusic/" target = "_blank" ><img  src="img/2/3"  title="GAME" width="50" heaight="50"></a>
-<hr>
-
+<tr>
+	
+ <td><a href="https://billing.columbus.te.ua/clients2.php" target = "_blank" ><img  src="img/start.png"  alt="Білінг" width="180" heaight="180" ></td>
+ <td width ="100%"></td>
+<td> <a href="https://docs.google.com/spreadsheets/d/1V55gGefLjbAAGL14Z2IJx6nzOFHMkq4xgeVY-unw5SY/edit?gid=1356785225#gid=1356785225" target = "_blank" ><img class="icon"  src="img/op.png" alt="Графік" width="50" heaight="20" ></a></td>
+<td> <a href="https://app.powerbi.com/home?experience=power-bi" target = "_blank" ><img  class="icon" src="img/sk.png" alt="Повер бі" width="50" heaight="20" ></a></td>	
+<td> <a href="https://www.youtube.com/" target = "_blank" ><img  src="img/4.png" alt="утубчик" width="50" heaight="20" ></a></td>
+<td> <a href="https://drive.google.com/drive/home" target = "_blank" ><img class="rotate"  src="img/drive.png" alt="Г.ДИСК" width="50" heaight="20" ></a></td>
+ <td>
+  <div class="dropdown" style="float:left;">
+  <button class="dropbtn">СО</button>
+  <div class="dropdown-content" style="left:0;">
+    <a href="https://docs.google.com/spreadsheets/d/1BJfw0N-J28qkoaflu8A7hchj-kOQ1FCCnVkLAibzTLY/edit?gid=298639417#gid=298639417" target = "_blank">KPI CB/CO</a>
+    <a href="https://docs.google.com/spreadsheets/d/1YMSykc7cPwA7bvfZak-Su4fGPp__MH9kWKrZADV8-tk/edit?gid=1998522442#gid=1998522442" target = "_blank">Втрачені</a>
+    <a href="https://docs.google.com/spreadsheets/d/1X96e_XqEMG-QAPRHh8EAJ0gru6bJ7jIef8N-vC7JpAs/edit?gid=182078680#gid=182078680" target = "_blank">Заявки із сайту</a>
+    <a href="https://docs.google.com/spreadsheets/d/1R54pY8NVzEZ633JCaROp0W3x1WWkdWs5n-G1fGbII8c/edit?gid=1632434140#gid=1632434140" target = "_blank">ERRORS</a>
+	  <a href="https://docs.google.com/spreadsheets/d/1yNA5_chqhMuoE7Hm8ZOJXgpzZK2-9STxpblUxf4jnfM/edit?gid=2005084719#gid=2005084719" target = "_blank">Блокування і борги</a>
+    <a href ="https://docs.google.com/document/d/1HnXWpj_1yEefc-jKml3PWS5MJa3_CoZk/edit" target = "_blank">Прейскурант</a>
+  </div>
+</div> 
+ </td>
+ <td> 
+ <div class="dropdown" style="float:right;">
+  <button class="dropbtn">Діагностика</button>
+  <div class="dropdown-content">
+    <a href="https://docs.google.com/document/d/1CX8BwphIejKzOCzrKXTuSqWbhquekhbi8PuXMEycAIo/edit" target = "_blank">Діагност скороч</a>
+    <a href="https://docs.google.com/document/d/1d2i-h6C3bDqCmcdwEA0s8mlrR1qfdrkN7i-QJ1PuBps/edit" target = "_blank">Діагност розшир </a>
+    <a href="https://drive.google.com"  target = "_blank">Гугл диск</a>
+  </div>
 </div>
-<div class="block1">
-<h1>ROOM</h1>
+ 
+ </td>
+  <td width ="60%"></td>
+ 
+ </tr>
+ </table>
 
-</div>
-<div class="block0">
-ROOM
-<hr>
 
-</div>
-</div>
-
-<div class ="block"> 
- <h2 id="quote">Тут буде цитата</h2>
 </div>
 <br>
 <br><br>
-<!--
+<br>
 <div class="container">
   <div class ="block3">
-<a href="https://docs.google.com/document/d/19MaCjPmy6GhaB0j4yGREatrey5zcQq92WviRyMLbieg/edit" target = "_blank" ><img  src="img/1/1" width="150" heaight= 160" >
-<h2>АКЦІЇ</h2></a>
+<a href="https://docs.google.com/document/d/19MaCjPmy6GhaB0j4yGREatrey5zcQq92WviRyMLbieg/edit" target = "_blank" ><img  src="img/acts.png" width="190" heaight="200" ><h2>Акції</h2></a>
 
-</div>
-
-<div class ="block3">
-
-<a href="https://docs.google.com/spreadsheets/d/1Z-Iaf8sW08faf_knxPYYp2QzZn9DSvQTdAqjAbOfdP8/edit?gid=138711317#gid=138711317" target = "_blank" ><img  src="img/1/2" width="130" heaight="130" ><h2>Заявки</h2></a>
-</div>
-<div class ="block3">
-<a href="https://docs.google.com/document/d/1cNIw9mAeISByRSZwp8YESyn1l3vW3-88/edit?pli=1#heading=h.ch6dx097fvj1" target = "_blank" ><img  src="img/1/3" width="145" heaight="200" ><h2>Скрипт</h2></a>
-
-</div>
-
-<div class ="block3">
-<a href="https://drive.google.com/drive/u/1/folders/19MOrpQjBxI3eP1-2Wf-7S8g1RFd7U-0w" target = "_blank" ><img  src="img/1/4" width="150" heaight="175" ><h2>Скарбничка розуму</h2></a>
-
-</div>
-<div class ="block3">
-<a href="https://docs.google.com/spreadsheets/d/1y7fiGUZ6H8_F39sTPn9so_JwrZpZryZrudMNpEiQrrQ/edit?gid=1910128994#gid=1910128994" target = "_blank" ><img  src="img/1/5" width="150" heaight="250" ><h2>Графік Листопад</h2></a>
 
 </div>
 <div class ="block3">
 
-<a href="http://185.53.79.88/stats/index.php" target = "_blank" ><img  src="img/1/6" width="150" heaight="250" ><h2>Астернік</h2></a>
+<a href="https://docs.google.com/spreadsheets/d/1Z-Iaf8sW08faf_knxPYYp2QzZn9DSvQTdAqjAbOfdP8/edit?gid=138711317#gid=138711317" target = "_blank" ><img  src="img/taruf.png" width="270" heaight="220" ><h2>Перевірка заявок</h2></a>
+</div>
+<div class ="block3">
+<a href="https://docs.google.com/document/d/1cNIw9mAeISByRSZwp8YESyn1l3vW3-88/edit?pli=1#heading=h.ch6dx097fvj1" target = "_blank" ><img  src="img/sc.png" width="175" heaight="200" ><h2>Скрипт</h2></a>
+
+</div>
+
+<div class ="block3">
+<a href="https://drive.google.com/drive/u/1/folders/19MOrpQjBxI3eP1-2Wf-7S8g1RFd7U-0w" target = "_blank" ><img  src="img/sher.jpg" width="225" heaight="175" ><h2>Скарбничка розуму</h2></a>
+
+</div>
+<div class ="block3">
+<a href="https://docs.google.com/spreadsheets/d/1y7fiGUZ6H8_F39sTPn9so_JwrZpZryZrudMNpEiQrrQ/edit?gid=1910128994#gid=1910128994" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік Листопад</h2></a>
+
+</div>
+<div class ="block3">
+
+<a href="http://185.53.79.88/stats/index.php" target = "_blank" ><img  src="img/gta.webp" width="200" heaight="250" ><h2>Астернік</h2></a>
 </div>
 
 </div>
--->
 
 
-<div class="navbar">
-<a href="https://www.google.co.uk/"  target = "_blank"><img style="padding:10px" src = "img/room.png" alt="you don't" width = "45" height = "45"  class="scale2" title="Гугл"  ></a>
-<a><img style="padding:10px" src = "img/mesenger.png" alt="you don't"  width = "45" height = "45"  class="scale2"></a>
-<a href ="messenger.html"><img style="padding:10px" src = "img/mess.png" alt="you don't"  width = "45" height = "45" class="scale2"></a>
-<a href="index.html" > <img src = "img/face" alt = "It's your face"  width = "55" height = "55" class="round" title="Білінг" ></a>
-<a><img style="padding:10px" src = "img/map.png" alt="you don't"  width = "45" height = "45" class="scale2"></a>
-<a href ="registered.html" ><img style="padding:10px" src = "img/main.png" alt="you don't"  width = "45" height = "45" class="scale2"></a>
-<a href ="COA.html" ><img style="padding:10px" src = "img/teh.png" alt="you don't"  width = "45" height = "45" class="scale2"></a></div>
-
-</div>
-<br><br>
+<br>
+<br>
 
 
-<div class="switch-container">
-  <!-- Кнопки перемикання -->
+
+
+
   
-  <!-- Контент блоків -->
-  <div class="switch-content">
-    <div id="block1" class="active">
-    <div class="container">
-    <div class ="block3">
-<a href="https://docs.google.com/document/d/19MaCjPmy6GhaB0j4yGREatrey5zcQq92WviRyMLbieg/edit" target = "_blank" ><img  src="img/1/1" width="150" heaight= 160" >
-<h2>АКЦІЇ</h2></a>
-
-</div>
-
-<div class ="block3">
-
-<a href="https://docs.google.com/spreadsheets/d/1Z-Iaf8sW08faf_knxPYYp2QzZn9DSvQTdAqjAbOfdP8/edit?gid=138711317#gid=138711317" target = "_blank" ><img  src="img/1/2" width="130" heaight="130" ><h2>Заявки</h2></a>
-</div>
-<div class ="block3">
-<a href="https://docs.google.com/document/d/1cNIw9mAeISByRSZwp8YESyn1l3vW3-88/edit?pli=1#heading=h.ch6dx097fvj1" target = "_blank" ><img  src="img/1/3" width="145" heaight="200" ><h2>Скрипт</h2></a>
-
-</div>
-
-<div class ="block3">
-<a href="https://drive.google.com/drive/u/1/folders/19MOrpQjBxI3eP1-2Wf-7S8g1RFd7U-0w" target = "_blank" ><img  src="img/1/4" width="150" heaight="175" ><h2>Скарбничка розуму</h2></a>
-
-</div>
-<div class ="block3">
-<a href="https://docs.google.com/spreadsheets/d/1y7fiGUZ6H8_F39sTPn9so_JwrZpZryZrudMNpEiQrrQ/edit?gid=1910128994#gid=1910128994" target = "_blank" ><img  src="img/1/5" width="150" heaight="250" ><h2>Графік Листопад</h2></a>
-
-</div>
-<div class ="block3">
-
-<a href="http://185.53.79.88/stats/index.php" target = "_blank" ><img  src="img/1/6" width="150" heaight="250" ><h2>Астернік</h2></a>
-</div>
-</div>
-    </div>
-    <div id="block2">
-      <div class="container">
-    <div class ="block3">
-<a href="https://docs.google.com/document/d/19MaCjPmy6GhaB0j4yGREatrey5zcQq92WviRyMLbieg/edit" target = "_blank" ><img  src="img/1/1" width="150" heaight= 160" >
-<h2>АКЦІЇ</h2></a>
-
-</div>
-
-<div class ="block3">
-
-<a href="https://docs.google.com/spreadsheets/d/1Z-Iaf8sW08faf_knxPYYp2QzZn9DSvQTdAqjAbOfdP8/edit?gid=138711317#gid=138711317" target = "_blank" ><img  src="img/1/2" width="130" heaight="130" ><h2>Заявки</h2></a>
-</div>
-<div class ="block3">
-<a href="https://docs.google.com/document/d/1cNIw9mAeISByRSZwp8YESyn1l3vW3-88/edit?pli=1#heading=h.ch6dx097fvj1" target = "_blank" ><img  src="img/1/3" width="145" heaight="200" ><h2>Скрипт</h2></a>
-
-</div>
-
-<div class ="block3">
-<a href="https://drive.google.com/drive/u/1/folders/19MOrpQjBxI3eP1-2Wf-7S8g1RFd7U-0w" target = "_blank" ><img  src="img/1/4" width="150" heaight="175" ><h2>Скарбничка розуму</h2></a>
-
-</div>
-<div class ="block3">
-<a href="https://docs.google.com/spreadsheets/d/1y7fiGUZ6H8_F39sTPn9so_JwrZpZryZrudMNpEiQrrQ/edit?gid=1910128994#gid=1910128994" target = "_blank" ><img  src="img/1/5" width="150" heaight="250" ><h2>Графік Листопад</h2></a>
-
-</div>
-<div class ="block3">
-
-<a href="http://185.53.79.88/stats/index.php" target = "_blank" ><img  src="img/1/6" width="150" heaight="250" ><h2>Астернік</h2></a>
-</div>
-</div>
-    </div>
-  </div>
-  <div class="switch-buttons">
-    <button class="active" data-target="block1"></button>
-    <button data-target="block2"></button>
-  </div>
-</div>
-<br><br><br><br><br>
-
-  <script src="1.js"></script>
-  <script> // JS для перемикання блоків
-  const buttons = document.querySelectorAll('.switch-buttons button');
-  const blocks = document.querySelectorAll('.switch-content > div');
-
-  buttons.forEach(button => {
-    button.addEventListener('click', () => {
-      // Зняти активний стан у всіх кнопок
-      buttons.forEach(btn => btn.classList.remove('active'));
-      // Поставити активний на поточну кнопку
-      button.classList.add('active');
-
-      // Показати відповідний блок і сховати інші
-      const target = button.getAttribute('data-target');
-      blocks.forEach(block => {
-        block.classList.remove('active');
-        if (block.id === target) {
-          block.classList.add('active');
-        }
-      });
-    });
-  });
-</script>
-
-</body> 
-
+  <footer>
+  <table >
+  <tr>
+  <td>м. Тернопіль, вул. Київська, 2</td>
+  <td>з пн-пт 9-18</td>
+  <td>сб-нд вих</td>
+  </tr>
+  <tr>
+  <td>м. Тернопіль, вул. Листопадова, 1</td>
+  <td>з пн-пт 9-19</td>
+  <td>сб-нд 9-16</td>
+  </tr>
+  <tr>
+  <td>м. Червоноград, вул. Стуса, 53</td>
+  <td>з пн-пт 9-18</td>
+  <td>сб 10-15</td>
+  </tr>
+  <tr>
+  <td>м. Володимир, вул. Роксолани, 6</td>
+  <td>з пн-пт 8-17</td>
+  <td>сб 10-15</td>
+  </tr>
+  </table>
+  
+  
+  </footer>
+</body>
 </html>
