--- a/index.html
+++ b/index.html
@@ -76,24 +76,12 @@
 <td> <a href="https://www.youtube.com/" target = "_blank" ><img  src="img/4.png" alt="утубчик" width="50" heaight="20" ></a></td>
 <td> <a href="https://drive.google.com/drive/home" target = "_blank" ><img class="rotate"  src="img/drive.png" alt="Г.ДИСК" width="50" heaight="20" ></a></td>
  <td>
-  <div class="dropdown" style="float:left;">
-  <button class="dropbtn">СО</button>
-  <div class="dropdown-content" style="left:0;">
-    <a href="https://docs.google.com/spreadsheets/d/1BJfw0N-J28qkoaflu8A7hchj-kOQ1FCCnVkLAibzTLY/edit?gid=298639417#gid=298639417" target = "_blank">KPI CB/CO</a>
-    <a href="https://docs.google.com/spreadsheets/d/1YMSykc7cPwA7bvfZak-Su4fGPp__MH9kWKrZADV8-tk/edit?gid=1998522442#gid=1998522442" target = "_blank">Втрачені</a>
-    <a href="https://docs.google.com/spreadsheets/d/1X96e_XqEMG-QAPRHh8EAJ0gru6bJ7jIef8N-vC7JpAs/edit?gid=182078680#gid=182078680" target = "_blank">Заявки із сайту</a>
-    <a href="https://docs.google.com/spreadsheets/d/1R54pY8NVzEZ633JCaROp0W3x1WWkdWs5n-G1fGbII8c/edit?gid=1632434140#gid=1632434140" target = "_blank">ERRORS</a>
-	  <a href="https://docs.google.com/spreadsheets/d/1yNA5_chqhMuoE7Hm8ZOJXgpzZK2-9STxpblUxf4jnfM/edit?gid=2005084719#gid=2005084719" target = "_blank">Блокування і борги</a>
-    <a href ="https://docs.google.com/document/d/1HnXWpj_1yEefc-jKml3PWS5MJa3_CoZk/edit" target = "_blank">Прейскурант</a>
-  </div>
-</div> 
- </td>
+   </td>
  <td> 
  <div class="dropdown" style="float:right;">
-  <button class="dropbtn">Діагностика</button>
+  <button class="dropbtn">Гугл диск</button>
   <div class="dropdown-content">
-    <a href="https://docs.google.com/document/d/1CX8BwphIejKzOCzrKXTuSqWbhquekhbi8PuXMEycAIo/edit" target = "_blank">Діагност скороч</a>
-    <a href="https://docs.google.com/document/d/1d2i-h6C3bDqCmcdwEA0s8mlrR1qfdrkN7i-QJ1PuBps/edit" target = "_blank">Діагност розшир </a>
+       
     <a href="https://drive.google.com"  target = "_blank">Гугл диск</a>
   </div>
 </div>
@@ -117,7 +105,7 @@
 </div>
 <div class ="block3">
 
-<a href="https://docs.google.com/spreadsheets/d/1Z-Iaf8sW08faf_knxPYYp2QzZn9DSvQTdAqjAbOfdP8/edit?gid=138711317#gid=138711317" target = "_blank" ><img  src="img/taruf.png" width="270" heaight="220" ><h2>Перевірка заявок</h2></a>
+<a href="https://docs.google.com/spreadsheets/d/1jNVOOfvM9LL0X4XDHKOBh74uzzOoEVNIIxwCOzhMU7Q/edit?gid=1486853304#gid=1486853304" target = "_blank" ><img  src="img/taruf.png" width="270" heaight="220" ><h2>Перевірка заявок</h2></a>
 </div>
 <div class ="block3">
 <a href="https://docs.google.com/document/d/1cNIw9mAeISByRSZwp8YESyn1l3vW3-88/edit?pli=1#heading=h.ch6dx097fvj1" target = "_blank" ><img  src="img/sc.png" width="175" heaight="200" ><h2>Скрипт</h2></a>
@@ -125,11 +113,11 @@
 </div>
 
 <div class ="block3">
-<a href="https://drive.google.com/drive/u/1/folders/19MOrpQjBxI3eP1-2Wf-7S8g1RFd7U-0w" target = "_blank" ><img  src="img/sher.jpg" width="225" heaight="175" ><h2>Скарбничка розуму</h2></a>
+<a href="https://drive.google.com/drive/u/1/folders/19MOrpQjBxI3eP1-2Wf-7S8g1RFd7U-0w" target = "_blank" ><img  src="img/sher.jpg" width="225" heaight="175" ><h2>Загальні матеріали </h2></a>
 
 </div>
 <div class ="block3">
-<a href="https://docs.google.com/spreadsheets/d/1y7fiGUZ6H8_F39sTPn9so_JwrZpZryZrudMNpEiQrrQ/edit?gid=1910128994#gid=1910128994" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік Листопад</h2></a>
+<a href="https://docs.google.com/spreadsheets/d/1s2TKYvcgisn-pB3QB4X0wdEFvY8phcMjB8vm4BPjKbA/edit?gid=1910128994#gid=1910128994" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік Листопад</h2></a>
 
 </div>
 <div class ="block3">
